# FastFoodGo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: db.sqlite3  manage.py
src/fastfoodgo/: asgi.py  settings.py  urls.py  wsgi.py
src/fastfoodgo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/restaurants/: models.py  urls.py  views.py
src/restaurants/migrations/: 0001_initial.py
tests/: test_commande.py  utils.py
