[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfoodgo"
version = "0.1.0"
description = "Projet FastFoodGo - TD DevOps"
authors = [{ name = "Ton Nom" }]
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "fastfoodgo.settings"
pythonpath = ["src"]
